<resources>
    <string name="app_name">Vote NYC</string>
    <string name="enter_location">Enter your location to find:</string>
    <string name="poll_place">Poll Sites</string>
    <string name="elected_officials">Elected Officials</string>
    <string name="next_election">Next Election</string>
    <string name="country">Country</string>
    <string name="national">National</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="borough">Borough</string>
    <string name="county">County</string>
    <string name="local">Local</string>
    <string name="recent_bills">Recent Bills</string>
    <string name="google_maps_api_key">AIzaSyCAxTPtkzrhpQcwJpJSdvCWle9Y4NuLsWw</string>
    <string name="edit_address">Address</string>
    <string name="edit_city">City</string>
    <string name="edit_state">State</string>
    <string name="edit_zip">Zipcode</string>
    <string name="senate">US Senate</string>
    <string name="house">House of Representatives</string>
    <string name="bill_number">Bill Number</string>
    <string name="bill_title">Bill Title</string>
    <string name="bill_introduced_date">Bill Introduced Date: </string>
    <string name="bill_cosponsors">Cosponsors: </string>
    <string name="bill_committees">Committees: </string>
    <string name="bill_latest_major_action_date">Latest Action Date: </string>
    <string name="bill_latest_major_action">Lates Major Action: </string>
    <string name="your_poll_location">YOUR POLL LOCATION</string>
    <string name="nyc_mayor">Mayor of the City of New York</string>
    <string name="bill_de_blasio">Bill de Blasio</string>
    <string name="democratic">Democratic</string>
    <string name="city_hall">City Hall</string>







</resources>