<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/tv_enter_address_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="Enter Your Home Address:"
        android:textSize="21sp" />

    <EditText
        android:id="@+id/et_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="250dp"
        android:background="#FFF00F"
        android:hint="@string/edit_address"
        android:inputType="textCapCharacters" />

    <EditText
        android:id="@+id/et_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="10dp"
        android:width="250dp"
        android:background="#FFF00F"
        android:hint="@string/edit_city"
        android:inputType="textCapCharacters" />

    <EditText
        android:id="@+id/et_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:width="250dp"
        android:background="#FFF00F"
        android:hint="@string/edit_state"
        android:inputType="textCapCharacters" />

    <EditText
        android:id="@+id/et_zip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:width="250dp"
        android:background="#FFF00F"
        android:hint="@string/edit_zip"
        android:inputType="number" />

    <Button
        android:id="@+id/bt_address_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="SUBMIT"/>

</LinearLayout>


