<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:name="com.google.android.gms.maps.MapFragment"
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="200dp"/>

    <ImageView
        android:id="@+id/iv_location_pin_small1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="250dp"
        android:src="@drawable/locationpinsmall" />

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_location_pin_small1"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/country" />

    <ImageView
        android:id="@+id/iv_location_pin_small2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginTop="250dp"
        android:layout_toRightOf="@+id/iv_location_pin_small1"
        android:src="@drawable/locationpinsmall" />

    <TextView
        android:id="@+id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_location_pin_small2"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="25dp"
        android:layout_toRightOf="@+id/country"
        android:text="@string/state" />

    <ImageView
        android:id="@+id/iv_location_pin_small3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginTop="250dp"
        android:layout_toRightOf="@+id/iv_location_pin_small2"
        android:src="@drawable/locationpinsmall" />

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_location_pin_small3"
        android:layout_marginLeft="23dp"
        android:layout_toRightOf="@+id/state"
        android:text="@string/city" />

    <ImageView
        android:id="@+id/iv_location_pin_small4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginTop="250dp"
        android:layout_toRightOf="@+id/iv_location_pin_small3"
        android:src="@drawable/locationpinsmall" />

    <TextView
        android:id="@+id/borough"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_location_pin_small3"
        android:layout_marginLeft="36dp"
        android:layout_toRightOf="@+id/city"
        android:text="@string/borough" />

    <ImageView
        android:id="@+id/iv_location_pin_small5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:layout_toRightOf="@+id/iv_location_pin_small4"
        android:src="@drawable/locationpinsmall" />

    <TextView
        android:id="@+id/local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_location_pin_small3"
        android:layout_marginLeft="30dp"
        android:layout_toRightOf="@+id/borough"
        android:text="@string/local" />

</RelativeLayout>