<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="325dp"
    android:background="#01f906">

    <ImageView
        android:id="@+id/iv_officials_national"
        android:src="@drawable/location_pin_small"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_alignParentLeft="true"
        android:clickable="true"/>

    <ImageView
        android:id="@+id/iv_officials_state"
        android:src="@drawable/location_pin_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/iv_officials_county"
        android:layout_toLeftOf="@+id/iv_officials_county"
        android:layout_toStartOf="@+id/iv_officials_county"
        android:layout_marginRight="24dp"
        android:layout_marginEnd="24dp" />

    <TextView
        android:id="@+id/tv_officials_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state"
        android:layout_below="@+id/iv_officials_state"
        android:layout_alignLeft="@+id/iv_officials_state"
        android:layout_alignStart="@+id/iv_officials_state"
        android:clickable="true"/>

    <ImageView
        android:id="@+id/iv_officials_county"
        android:src="@drawable/location_pin_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/iv_officials_city"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/tv_officials_county"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/county"
        android:layout_below="@+id/iv_officials_county"
        android:layout_alignLeft="@+id/iv_officials_county"
        android:layout_alignStart="@+id/iv_officials_county" />


    <ImageView
        android:id="@+id/iv_officials_city"
        android:src="@drawable/location_pin_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="28dp"
        android:layout_marginEnd="28dp"
        android:layout_alignTop="@+id/iv_officials_local"
        android:layout_toLeftOf="@+id/iv_officials_local"
        android:layout_toStartOf="@+id/iv_officials_local"
        android:clickable="true"/>

    <TextView
        android:id="@+id/tv_officials_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:layout_below="@+id/iv_officials_city"
        android:layout_alignLeft="@+id/iv_officials_city" />

    <ImageView
        android:id="@+id/iv_officials_local"
        android:src="@drawable/location_pin_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_alignParentRight="true"
        android:clickable="true"/>

    <TextView
        android:id="@+id/tv_officials_local"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/local"
        android:layout_below="@+id/iv_officials_local"
        android:layout_alignLeft="@+id/iv_officials_local"
        />

    <TextView
        android:id="@+id/tv_officials_national"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/national"
        android:layout_below="@+id/iv_officials_national"
        android:layout_alignRight="@+id/iv_officials_national"
        android:layout_alignEnd="@+id/iv_officials_national" />


</RelativeLayout>