<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="200dp">

    <TextView
        android:id="@+id/tv_national_election"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/national"
        android:textStyle="bold"
        android:clickable="true"
        android:layout_alignRight="@+id/iv_national_election"
        android:layout_alignEnd="@+id/iv_national_election"
        android:layout_alignTop="@+id/tv_state_election"
        android:layout_alignBottom="@+id/tv_state_election" />

    <TextView
        android:id="@+id/tv_state_election"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/state"
        android:clickable="true"
        android:layout_alignBaseline="@+id/tv_city_election"
        android:layout_alignBottom="@+id/tv_city_election"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/iv_state_election"
        android:src="@drawable/location_pin_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:layout_above="@+id/tv_state_election"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/iv_city_election"
        android:src="@drawable/location_pin_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="48dp"
        android:layout_marginEnd="48dp"
        android:clickable="true"
        android:layout_alignTop="@+id/iv_national_election"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/tv_city_election"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:layout_below="@+id/iv_city_election"
        android:layout_alignRight="@+id/iv_city_election"
        android:layout_alignEnd="@+id/iv_city_election"
        android:layout_marginRight="14dp"
        android:layout_marginEnd="14dp"
        android:textStyle="bold"/>

    <ImageView
        android:id="@+id/iv_national_election"
        android:src="@drawable/location_pin_small"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:clickable="true"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="55dp"
        android:layout_marginStart="55dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>