<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="250dp" />

    <TextView
        android:id="@+id/tv_officials_national"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/iv_officials_national"
        android:layout_alignRight="@+id/iv_officials_national"
        android:layout_alignTop="@+id/tv_officials_state"
        android:text="@string/national"
        android:layout_alignBottom="@+id/tv_officials_state" />

    <TextView
        android:id="@+id/tv_officials_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_officials_city"
        android:layout_alignBottom="@+id/tv_officials_city"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:text="@string/state" />

    <ImageView
        android:id="@+id/iv_officials_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_officials_state"
        android:layout_centerHorizontal="true"
        android:src="@drawable/location_pin_small" />

    <ImageView
        android:id="@+id/iv_officials_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/iv_officials_national"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:clickable="true"
        android:src="@drawable/location_pin_small" />

    <TextView
        android:id="@+id/tv_officials_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/iv_officials_city"
        android:layout_alignRight="@+id/iv_officials_city"
        android:layout_below="@+id/iv_officials_city"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:text="@string/city" />

    <ImageView
        android:id="@+id/iv_officials_national"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="49dp"
        android:layout_marginStart="49dp"
        android:clickable="true"
        android:src="@drawable/location_pin_small"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="218dp" />

    <TextView
        android:id="@+id/tv_election_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="#081D8F"
        android:layout_gravity="bottom"
        android:text="Next Election: July 6th, 2017"
        android:layout_below="@+id/tv_officials_national"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>